# rust_learning

./: Cargo.toml  README.md
basics/: 01_hello_world.rs  02_variables.rs  03_control_flow.rs  04_functions.rs  05_ownership.rs  README.md
examples/: 01_simple_calculator.rs  02_student_management.rs  03_text_analyzer.rs  README.md
notes/: 01_control_flow.md  02_functions_methods.md  03_ownership_system.md  README.md
projects/: README.md
projects/calculator/: README.md
projects/calculator/src/: main.rs
